Fixed minor spacing issues

--- a/src/App.css
+++ b/src/App.css
@@ -425,13 +425,14 @@ span {
 }
 
 .project-details {
-  width: 40%;
+  width: 40vw;
   height: 70%;
   justify-content: center;
   align-items: center;
   align-self: center;
   display: flex;
   flex-wrap: wrap;
+  padding-right: 20px;
 }
 
 .project-details-description {
@@ -462,10 +463,6 @@ span {
   justify-content: center;
   align-content: center;
   margin-top: 0vw;
-}
-
-.project-icon {
-  margin-left: 50px !important;
 }
 
 .project-stack-box {
@@ -661,6 +658,7 @@ span {
 
   .project-details {
     width: 100%;
+    padding-right: 0px;
   }
 
   .project-stack-box {
@@ -670,6 +668,7 @@ span {
 
   .project-details-description {
     margin-top: -20px;
+    padding-right: 0px;
   }
 
   .vid-container {
@@ -744,10 +743,14 @@ span {
     right: 0px;
   }
 
+  #soundcache-logo-box {
+    margin-right: 10vw;
+  }
+
   .project-logo-box {
     position: absolute;
     margin-top: -37vh;
-    margin-right: 10vw;
+    /* margin-right: 10vw; */
     width: 200px;
   }
 
@@ -907,13 +910,13 @@ span {
   #soundcache-logo-box {
     width: 100%;
     margin-top: -390px;
+    margin-right: -10px;
     position: absolute;
   }
 
   #unravel-logo-box {
     width: 60%;
     margin-top: -390px;
-    margin-left: -10px;
     position: absolute;
   }
 
